   UnixFilesystem class which permits the client to escape its home directory
   and navigate the real filesystem.

 * Issue #138: added DTPHandler.get_elapsed_time() method which returns the
   transfer elapsed time in seconds.

 * Issue #144: a "username" parameter is now passed to authorizer's
   terminate_impersonation() method.

Bugfixes:

 * Issue #120: an ActiveDTP() instance is not garbage collected in case a
   client issuing PORT disconnects before establishing the data connection.

 * Issue #122: a wrong variable name was used in AbstractedFS.validpath method.

 * Issue #123: PORT command doesn't bind to correct address in case an alias
   is created for the local network interface.

 * Issue #140: pathnames returned in PWD response should have double-quotes '"'
   escaped.

 * Issue #146: SIZE and MDTM commands are now rejected unless the "l" permission
   has been specified for the user.


Major API changes since 0.5.2

 * removed support for Python 2.3.

 * all classes are now new-style classes.

 * AbstractedFS class:
   * __init__ now accepts two arguments: root and cmd_channel.
   * root and cwd attributes are now read-only properties.
   * 3 new methods have been added:
     - get_user_by_uid()
     - get_group_by_gid()
     - readlink()

 * FTPHandler class:
   * new class attributes:
     - use_gmt_times
     - tcp_no_delay
     - masquerade_address_map
   * new methods:
     - on_incomplete_file_sent()
     - on_incomplete_file_received()
     - on_login()
     - on_logout()
     - log_fs_cmd()
     - log_transfer()
   * proto_cmds class attribute has been added.  The FTPHandler class  no longer
     relies on "ftpserver.proto_cmds" global dictionary but on
     "ftpserver.FTPHandler.proto_cmds" instead.

 * FTPServer class:
   - max_cons attribute defaults to 512 by default instead of 0 (unlimited).

 * DummyAuthorizer:
   - ValueError exceptions are now raised instead of AuthorizerError.